Added user responses to lists and automatic error reporting. Changed to Paths.get for file paths.